--- a/BanHang/Areas/Admin/Views/Account/Create.cshtml
+++ b/BanHang/Areas/Admin/Views/Account/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model BanHang.Models.ApplicationUser  
+@model BanHang.Models.CreateAccountViewModel  
 @{
     ViewBag.Title = "Thêm mới tài khoản";
 }
@@ -31,7 +31,7 @@
         </div>
         <div class="card-body">
 
-            @using (Html.BeginForm("Create", "Account", FormMethod.Post,new { }))
+            @using (Html.BeginForm("Create", "Account", FormMethod.Post))
             {
                 @Html.ValidationSummary(false)
                 @Html.AntiForgeryToken()
@@ -57,9 +57,12 @@
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    @Html.PasswordFor(x => x.PasswordHash, new { @class = "form-control" })
+                    @Html.PasswordFor(x => x.Password, new { @class = "form-control" })
                 </div>
-                
+                <div class="form-group">
+                    <label>Password2</label>
+                    @Html.PasswordFor(x => x.ConfirmPassword, new { @class = "form-control" })
+                </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-success">thêm</button>
                 </div>
