--- a/BanHang/Areas/Admin/Views/Account/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Account/Index.cshtml
@@ -25,11 +25,10 @@
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">danh sách tài khoản</h3>
-            
 
             <div class="card-tools">
                 <a href="/admin/account/create" class="btn btn-success">Thêm mới</a>
-               
+                <a href="#" class="btn btn-danger" id="BtnDeleteAll">Xóa</a>
             </div>
         </div>
         <div class="card-body">
@@ -37,13 +36,10 @@
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>id</th>
                         <th>Tài Khoản</th>
                         <th>Họ Tên</th>
                         <th>Email</th>
-                        <th>Quyền</th>
-
-
+                        
                         <th></th>
                     </tr>
                 </thead>
@@ -55,21 +51,17 @@
                         {
                             <tr>
                                 <td>@i</td>
-                                <td>@item.Id</td>
                                 <td>@item.UserName</td>
                                 <td>@item.FullName</td>
                                 <td>@item.Email</td>
-                                <td>@item.Role</td>
-
+                                <td>@item.Roles</td>
                                 <td>
-                                    <a href="/admin/account/edit/@item.Id" class="btn btn-sm btn-primary">sửa</a>
-                                    <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
+                                    <a href="/admin/account/edit/@item.UserName" class="btn btn-sm btn-primary">sửa</a>
+                                    <a href="#" data-user="@item.UserName" class="btn btn-sm btn-danger">xóa</a>
                                 </td>
                             </tr>
-                            i++;
                         }
                     }
-
                 </tbody>
             </table>
 
@@ -83,29 +75,4 @@
     <!-- /.card -->
 
 </section>
-@section scripts{
-    <script>
-        $(document).ready(function () {
-            
-            $('body').on('click', '.btnDelete', function () {
-                var id = $(this).data("id");
-                var conf = confirm('Bạn muốn xóa hay không?');
-                if (conf == true) {
-                    $.ajax({
-                        url: '/admin/account/delete',
-                        type: 'POST',
-                        data: { id: id },
-                        success: function (rs) {
-                            if (rs.success) {
-                                window.location.reload();
-
-                            }
-                        }
-                    });
-                }
-            });
-
-            
-        });
-    </script>
-}
+<!-- /.content -->
