--- a/BanHang/Views/Products/Index.cshtml
+++ b/BanHang/Views/Products/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<BanHang.Models.EF.Product>
+﻿
+@model IEnumerable<BanHang.Models.EF.Product>
 
 
 <link rel="stylesheet" type="text/css" href="~/Content/assets/styles/categories_styles.css">
@@ -53,26 +54,26 @@
 
         <!-- Color -->
         @*<div class="sidebar_section">
-                            <div class="sidebar_title">
-                                <h5>Color</h5>
-                            </div>
-                            <ul class="checkboxes">
-                                <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Black</span></li>
-                                <li class="active"><i class="fa fa-square" aria-hidden="true"></i><span>Pink</span></li>
-                                <li><i class="fa fa-square-o" aria-hidden="true"></i><span>White</span></li>
-                                <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Blue</span></li>
-                                <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Orange</span></li>
-                                <li><i class="fa fa-square-o" aria-hidden="true"></i><span>White</span></li>
-                                <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Blue</span></li>
-                                <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Orange</span></li>
-            <li><i class="fa fa-square-o" aria-hidden="true"></i><span>White</span></li>
-                                <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Blue</span></li>
-                                <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Orange</span></li>
-                            </ul>
-                            <div class="show_more">
-                                <span><span>+</span>Show More</span>
-                            </div>
-                        </div>*@
+                <div class="sidebar_title">
+                    <h5>Color</h5>
+                </div>
+                <ul class="checkboxes">
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Black</span></li>
+                    <li class="active"><i class="fa fa-square" aria-hidden="true"></i><span>Pink</span></li>
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>White</span></li>
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Blue</span></li>
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Orange</span></li>
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>White</span></li>
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Blue</span></li>
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Orange</span></li>
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>White</span></li>
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Blue</span></li>
+                    <li><i class="fa fa-square-o" aria-hidden="true"></i><span>Orange</span></li>
+                </ul>
+                <div class="show_more">
+                    <span><span>+</span>Show More</span>
+                </div>
+            </div>*@
 
     </div>
 
@@ -124,6 +125,7 @@
                         </div>
 
                     </div>
+
                     <!-- Product Grid -->
                     <div class="product-grid">
 
@@ -179,18 +181,18 @@
                                         </li>
                                     </ul>
                                     @*<span class="showing_results">Showing 1–3 of 12 results</span>
-                                        <div class="pages d-flex flex-row align-items-center">
-                                            <div class="page_current">
-                                                <span>1</span>
-                                                <ul class="page_selection">
-                                                    <li><a href="#">1</a></li>
-                                                    <li><a href="#">2</a></li>
-                                                    <li><a href="#">3</a></li>
-                                                </ul>
-                                            </div>
-                                            <div class="page_total"><span>of</span> 3</div>
-                                            <div id="next_page_1" class="page_next"><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></div>
-                                        </div>*@
+                    <div class="pages d-flex flex-row align-items-center">
+                        <div class="page_current">
+                            <span>1</span>
+                            <ul class="page_selection">
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                            </ul>
+                        </div>
+                        <div class="page_total"><span>of</span> 3</div>
+                        <div id="next_page_1" class="page_next"><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></div>
+                    </div>*@
 
                                 </div>
 
@@ -210,3 +212,4 @@
 @section scripts{
     <script src="~/Content/assets/js/categories_custom.js"></script>
 }
+
