--- a/BanHang/Views/Menu/_MenuTop.cshtml
+++ b/BanHang/Views/Menu/_MenuTop.cshtml
@@ -5,7 +5,16 @@
     <ul class="navbar_menu">
         @foreach (var item in Model)
         {
-            <li><a href="@item.Alias">@item.Tiltle</a></li>
+            @*<li><a href="@item.Alias">@item.Tiltle</a></li>*@
+            if (item.Alias.Equals("trang-chu"))
+            {
+                item.Alias = "";
+            }
+            if (!string.IsNullOrEmpty(item.Link))
+            {
+                item.Alias = item.Link;
+            }
+            <li><a href="/@item.Alias">@item.Tiltle</a></li>
         }
 
         @*<li><a href="#">shop</a></li>
