--- a/BanHang/Views/Account/Login.cshtml
+++ b/BanHang/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Log in";
 }
-@*<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">*@
+<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-xA0NIEBcZVKqMHUwYMgRnMtwLyHiJj5M2OGmiqXbXQlRJDDN8q7gAxoN+b9a9kDM" crossorigin="anonymous">
 <style>
 
