--- a/BanHang/Views/Shared/_Layout.cshtml
+++ b/BanHang/Views/Shared/_Layout.cshtml
@@ -119,8 +119,8 @@
                 </div>
             </div>
 
-            <!--<!-- Main Navigation -->-->
-            <!--@*<div class="main_nav_container">
+            <!-- Main Navigation -->
+            <div class="main_nav_container">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-right">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                 </div>
-            </div>*@-->
+            </div>
 
         </header>
 
