--- a/BanHang/Content/template/send1.html
+++ b/BanHang/Content/template/send1.html
@@ -67,7 +67,7 @@
 			   <td valign="top" width="50%"
 		  style="text-align:left;font-family:'Helvetica Neue',Helvetica,Roboto,Arial,sans-serif;border:0;padding:0">
 				   <h2 style="color:#96588a;display:block;font-family:'Helvetica Neue',Helvetica,Roboto,Arial,sans-serif;font-size:18px;font-weight:bold;line-height:130%;margin:0 0 18px;text-align:left">
-					   Thông tin người nhận
+					   Thông tin người gửi
 				   </h2>
 
 				   <address style="padding:12px;color:#636363;border:1px solid #e5e5e5">
