--- a/BanHang/Views/AddToCart/AddToCart.cshtml
+++ b/BanHang/Views/AddToCart/AddToCart.cshtml
@@ -5,9 +5,9 @@
 
 }
 
-@*<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
+<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_styles.css">
-<link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_responsive.css">*@
+<link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_responsive.css">
 <h2 style="position: relative; left: 80px">Giỏ Hàng</h2>
 
 
