--- a/BanHang/Views/Account/ConfirmEmail.cshtml
+++ b/BanHang/Views/Account/ConfirmEmail.cshtml
@@ -1,8 +1,11 @@
-﻿@{
-    ViewBag.Title = "Confirm Email";
+﻿
+@{
+    ViewBag.Title = "ConfirmEmail";
+    Layout = "~/Views/Shared/View.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>ConfirmEmail</h2>
+
 <div>
     <p>
         Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
