--- a/BanHang/Views/Shared/_Layout.cshtml
+++ b/BanHang/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-
+<html>
 <head>
     <title>Chợ Online</title>
     <meta charset="utf-8">
@@ -122,33 +122,33 @@
             </div>
 
             <!--<!-- Main Navigation -->
-            @*<div class="main_nav_container">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-12 text-right">
-                                <div class="logo_container">
-                                    <a href="/">Chợ<span style="color: forestgreen;">Online</span></a>
-                                </div>
-                                <nav class="navbar">
-                                    @Html.Action("MenuTop", "Menu")
-                                    <ul class="navbar_user">
-                                        <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                                        <li class="checkout">
-                                            <a href="#">
-                                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                                                <span id="checkout_items" class="checkout_items">2</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                    <div class="hamburger_container">
-                                        <i class="fa fa-bars" aria-hidden="true"></i>
-                                    </div>
-                                </nav>
+            <div class="main_nav_container">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 text-right">
+                            <div class="logo_container">
+                                <a href="/">chợ<span style="color: forestgreen;">online</span></a>
                             </div>
+                            <nav class="navbar">
+                                @Html.Action("menutop", "menu")
+                                <ul class="navbar_user">
+                                    <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+                                    <li class="checkout">
+                                        <a href="#">
+                                            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                            <span id="checkout_items" class="checkout_items">2</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="hamburger_container">
+                                    <i class="fa fa-bars" aria-hidden="true"></i>
+                                </div>
+                            </nav>
                         </div>
                     </div>
-                </div>*@
+                </div>
+            </div>
 
         </header>
 
@@ -221,7 +221,7 @@
         </script>
         <!--End of Tawk.to Script-->
         <!-- Newsletter -->
-        <div class="newsletter">
+        @*<div class="newsletter">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -240,7 +240,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <!-- Footer -->
 
@@ -281,7 +281,7 @@
     </div>
 
     @*@Scripts.Render("~/bundles/jquery")*@
-    
+
     <script src="~/Content/assets/styles/bootstrap4/popper.js"></script>
     <script src="~/Content/assets/styles/bootstrap4/bootstrap.min.js"></script>
     <script src="~/Content/assets/plugins/Isotope/isotope.pkgd.min.js"></script>
@@ -306,3 +306,4 @@
     }
 }
 
+</html>
